# Mamba

./: .env.example  .gitignore  Cargo.toml  README.md  mkdocs.yml
.github/workflows/: docs.yml
docs/: MAMBA_API.md  MAMBA_CLI.md  MAMBA_CREATE.md  MAMBA_MCP.md  MCP_CLIENT_SETUP.md  architecture.md  index.md  markets.md  quickstart.md  repository-workflow.md
docs/features/: wallet-cleaner.md
docs/reference/: module-map.md  repository-inventory.md  scripts-and-artifacts.md
docs/stylesheets/: extra.css
scripts/: generate_docs_inventory.sh  install_mamba_linux.sh  install_mamba_macos.sh  install_mamba_windows.ps1  print_mamba_mcp_configs.sh  snapshot_to_svg.sh  sync_sources.sh
src/: constants.rs  lib.rs
src/api/: create.rs  mod.rs  pool.rs  wallet.rs
src/compute_budget/: compute_budget.rs  mod.rs
src/core/: cluster.rs  create.rs  ipfs.rs  mod.rs  pool.rs  sol.rs  wallet.rs
src/dex/: meteora_damm_v1.rs  meteora_damm_v2.rs  meteora_dbc.rs  meteora_dlmm.rs  mod.rs  operator_live_tests.rs  pump_fun.rs  pump_swap.rs  raydium_amm_v4.rs  raydium_clmm.rs  raydium_cpmm.rs  raydium_launchpad.rs  swaps.rs
src/gate/: mod.rs  squeeze.rs
src/handlers/: ws.rs
src/idls/meteora_dlmm_types/: Cargo.toml
src/idls/meteora_dlmm_types/src/: lib.rs
src/idls/pump_fun_types/: Cargo.toml
src/idls/pump_fun_types/src/: lib.rs
src/idls/pump_swap_types/: Cargo.toml  pump_swap.json
src/idls/pump_swap_types/src/: lib.rs
src/idls/raydium_launchpad_types/: Cargo.toml
src/idls/raydium_launchpad_types/src/: lib.rs
src/mcp/: mod.rs
src/swqos/: blox.rs  helius.rs  jito.rs  mod.rs  nextblock.rs  temporal.rs  zero_slot.rs
src/transfers/: cex.rs  mod.rs  wsol.rs
src/utils/: mod.rs  utils.rs  writing.rs
tests/: mamba_mcp.rs
