[package]
name = "mamba"
version = "0.1.0"
edition = "2024"

[dependencies]
pump_fun_types = { path = "./src/idls/pump_fun_types" }
pump_swap_types = { path = "./src/idls/pump_swap_types" }
raydium_launchpad_types = { path = "./src/idls/raydium_launchpad_types" }
meteora_dlmm_types = { path = "./src/idls/meteora_dlmm_types" }
anchor-lang = { version = "0.31.1" }
solana-client = "3.1.3"
solana-program = "3.0.0"
solana-pubkey = "4.0.0"
solana-address = "2.0.0"
solana-nonce = "3.0.0"
serde = "1.0.219"
serde_json = "1.0.142"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json", "multipart"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time", "sync", "net"] }
tokio-stream = "0.1.17"
axum = { version = "0.8.2", features = ["ws"] }
solana-account = "3.2.0"
solana-commitment-config = "3.1.0"
solana-rpc-client-types = "3.1.4"
solana-pubsub-client = "3.1.4"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signature = "3.1.0"
solana-keypair = "3.1.0"
solana-signer = "3.0.0"
spl-associated-token-account = { version = "8.0.0", features = ["no-entrypoint"] }
anyhow = "1.0.100"
borsh = "1.6"
borsh010 = { package = "borsh", version = "0.10" }
bs58 = "0.4"
base64 = "0.21"

spl-token-metadata-interface = "0.8.0"
spl-type-length-value = "0.9.0"

solana-transaction-error = "3.0.0"
jito-sdk-rust = "0.3.2"
solana-instruction = "3.1.0"
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }
solana-transaction-status = "3.1.4"
solana-account-decoder-client-types = "3.1.4"
yellowstone-grpc-proto = "12.1.0"
tonic = "0.14.1"
futures = "0.3.31"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres"] }
dashmap = "6.1.0"
regex = "1.11.2"
once_cell = "1.21.3"
ringbuffer = "0.16.0"
chrono = "0.4.41"
tower-http = { version = "0.6.6", features = ["cors"] }
ruint = "1.14.0"

bincode = "1.3"
dotenv = { package = "dotenvy", version = "0.15.7" }

mpl-token-metadata = { version = "5.1.1", default-features = false }
moka = { version = "0.12.11", features = ["sync"] }

solana-system-interface = { version = "3.0.0", features = ["bincode"] }
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
arboard = "3.4.1"
rmcp = { version = "1.2.0", features = ["client", "transport-child-process", "transport-io"] }
schemars = "1.2.1"

[target.'cfg(not(windows))'.dependencies]
yellowstone-grpc-client = "12.2.0"

[patch.crates-io]
anchor-idl = { path = "external/patches/anchor-idl" }

[profile.dev]
debug = 0
codegen-units = 256
incremental = true

[profile.test]
debug = 0
codegen-units = 256
incremental = true
